outputs/ndx-test/reevo/2025-07-28_21-05-02/problem_iter1_response6.txt_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/ndx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/ndx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/ndx/tmp/gpt_temp_6_8cdbd39e.py", line 10
    rsi = 100 - (100 / (1 + (daily_return.rolling(window=14).apply(lambda x: (x[x>0].sum())/(abs(x[x<0]).sum()) if x[x<0].sum() != 0 else 1)))
                ^
SyntaxError: '(' was never closed
